@@ -6,6 +6,8 @@ class Config {
 
     private const DEFAULT_AUTH_MODE = 'oauth';
 
+    private const TOKEN_ACCESS_DIR = __DIR__ . '/../.tokenAccess/';
+
     /** @var array */
     private $config = [];
 
@@ -25,6 +27,12 @@ class Config {
         'API_PASSWORD',
         'API_AUTH_MODE',
     ];
+
+    /** @var callable */
+    private $tokenRefreshCallable;
+
+    /** @var callable */
+    private $tokenAccessCallable;
 
     /**
      * @param string $path
@@ -109,6 +117,41 @@ class Config {
     }
 
     /**
+     * @return callable|null
+     */
+    public function getTokenRefreshCallable() {
+        return $this->tokenRefreshCallable;
+    }
+
+    /**
+     * @param callable $tokenRefreshCallable
+     */
+    public function setTokenRefreshCallable(callable $tokenRefreshCallable) {
+        $this->tokenRefreshCallable = $tokenRefreshCallable;
+    }
+
+    /**
+     * @return callable|null
+     */
+    public function getTokenAccessCallable() {
+        return $this->tokenAccessCallable;
+    }
+
+    /**
+     * @param callable $tokenAccessCallable
+     */
+    public function setTokenAccessCallable(callable $tokenAccessCallable) {
+        $this->tokenAccessCallable = $tokenAccessCallable;
+    }
+
+    public function deleteTokenAccessFile() {
+        $filename = $this->getTokenAccessFilename();
+        if (file_exists(self::TOKEN_ACCESS_DIR . $filename)) {
+            unlink(self::TOKEN_ACCESS_DIR . $filename);
+        }
+    }
+
+    /**
      * @throws \InvalidArgumentException
      */
     public function validate() {
@@ -126,6 +169,29 @@ class Config {
             throw new \InvalidArgumentException("config file '$path' not found");
         }
         $this->config = parse_ini_file($path);
+
+        $this->setTokenRefreshCallable(function ($credentials) {
+            self::createTokenDir();
+            $credentials = [
+                'access_token' => $credentials['access_token'],
+                'refresh_token' => $credentials['refresh_token'],
+            ];
+            file_put_contents(
+                self::TOKEN_ACCESS_DIR . $this->getTokenAccessFilename(),
+                base64_encode(json_encode($credentials))
+            );
+        });
+
+        $this->setTokenAccessCallable(function () {
+            $filename = $this->getTokenAccessFilename();
+            if (!file_exists(self::TOKEN_ACCESS_DIR . $filename)) {
+                return false;
+            }
+            return json_decode(base64_decode(
+                file_get_contents(self::TOKEN_ACCESS_DIR . $filename)
+            ), true);
+        });
+
         $this->validate();
     }
 
@@ -151,5 +217,18 @@ class Config {
                 );
             }
         }
+    }
+
+    /**
+     * @return string
+     */
+    private function getTokenAccessFilename() {
+        return md5($this->getApiUsername() . $this->getApiPassword());
+    }
+
+    private static function createTokenDir() {
+        !is_dir(self::TOKEN_ACCESS_DIR) &&
+        !mkdir(self::TOKEN_ACCESS_DIR) &&
+        !is_dir(self::TOKEN_ACCESS_DIR);
     }
 }
