@@ -1,4 +1,6 @@
 {
+  "token_type": "Bearer",
+  "expires_in": 86400,
   "access_token": "aGVsbG93b3JsZDpoZWxsb3dvcmxk",
   "refresh_token": "aGVsbG93b3JsZDpoZWxsb3dvcmxkOnJlZnJlc2g="
 }
