@@ -19,3 +19,4 @@
 2019-01-10: Version 2.0.0, support multiple abbreviations for basics and calculations measurement endpoints, and use OAuth2 authentication mode by default
 2019-01-16: Add specific energy yield forecast endpoint
 2019-07-16: Add isActive property to stringbox abbreviation endpoint, activeOnly to stringbox bulk endpoint and abbreviations filter to all bulk endpoints
+2019-07-16: Implement OAuth token cache
